2003-10-13  Bas Wijnen <b.wijnen@phys.rug.nl>
	* client/client.c, server/pregame.c: Added pirate position to
	reconnect info.
	* common/game.c, server/player.c, server/pregame.c, server/server.h:
	Bugfixes.

2003-10-12  Roland Clobus <rclobus@bigfoot.com>
	* client/admin_gtk.c, client/connect.c, common/network.c,
	common/network.h, common/state.c, meta-server/gnocatan-meta-server.c,
	server/gnocatan-server.c, server/meta.c: Changed net_free to NULLify
	the session, changed the meta-server connection dialog, fixed bug
	#717982, added meta-server redirections without port-number.

2003-10-12  Bas Wijnen <b.wijnen@phys.rug.nl>
	* AUTHORS: Added my name.
	* Makefile.am: Fixed make distcheck bug.
	* po/de.po, po/es.po, po/gnocatan.pot: Updated.

2003-10-12  Bas Wijnen <b.wijnen@phys.rug.nl>
	* ai/client.c, client/client.c: Fixed version conflict bug.
	* po/de.po, po/es.po, po/gnocatan.pot: Updated.

2003-10-10  Jason Long <jlong@messiah.edu>
	* Removed client/help/C/images/*.gif client/help/C/gnocatan.sgml,
	client/help/C/topic.dat; added xmldocs.make, omf.make,
	client/help/C/gnocatan.xml, client/help/C/gnocatan-C.omf,
	client/help/C/legal.xml, client/help/C/images/*.png; changed
	client/help/C/Makefile.am, Makefile.am, client/Makefile.am,
	client/gnocatan.c: bring Gnocatan help system up to Gnome2 standards.

2003-10-04  Roland Clobus <rclobus@bigfoot.com>
	* client/client.c,client/config-gnome.c,client/config-gnome.h,
	client/connect.c,client/gui.c,client/i18n.c: Settings dialog uses
	config-gnome.c. Removed French and Italian, due to unavailable
	translations. 

2003-10-04  Roland Clobus <rclobus@bigfoot.com>
	* client/gui.c,server/gnocatan-server-gtk.c: The application icons are
	now shown.

2003-10-12  Bas Wijnen <b.wijnen@phys.rug.nl>
	* common/game.c, common/map.c, common/map.h, common/map_query.c: Added
	support for nodes where setup is not allowed.

2003-10-12  Bas Wijnen <b.wijnen@phys.rug.nl>